# HandleTur

./: cheapest_stores.py  grocery_items.py  pyproject.toml  shopping_list.py  temp_handletur.py
